# Sound

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/top/toly/sound/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: smbPitchShift.cpp
app/src/main/java/top/toly/app/: Poster.java  Recorder.java  StrUtil.java
app/src/main/java/top/toly/app/io/: FileHelper.java  IOUtils.java  PathUtils.java
app/src/main/java/top/toly/app/permission/: Permission.java  PermissionActivity.java
app/src/main/java/top/toly/app/test/: L.java  StrUtil.java  ToastUtil.java
app/src/main/java/top/toly/app/visibale/: ByteUtils.java  FrequencyScanner.java  PcmFileWaveConverter.java  PcmFileWaveView.java
app/src/main/java/top/toly/sound/: FileActivity.java  SoundActivity.java
app/src/main/java/top/toly/sound/aac/: MediaRecorderActivity.java  MediaRecorderTask.java
app/src/main/java/top/toly/sound/audio/: OnRecording.java  PCMAudioPlayer.java  PCMRecordTask.java  PCMSoundActivity.java  PcmToWavUtil.java
app/src/main/res/drawable/: icon_music_list.xml  icon_next.xml  icon_start_2.xml  icon_start_3.xml  icon_stop_2.xml  icon_stop_3.xml  play.xml
app/src/main/res/layout/: activity_bit.xml  activity_effect_sound.xml  activity_file.xml  activity_main_list.xml  activity_sound.xml  in_main_list_bottom_bar.xml  layout_player_effect.xml  layout_recoder.xml  layout_recoder_rth.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/top/toly/sound/: ExampleUnitTest.java  ExecutorServiceTest.java
(+112 files in other folders)
